style.css
@import url("https://fonts.googleapis.com/css?family=Poppins&display=swap");

:root {
  --font-main: "Poppins", sans-serif;
  --clr-background: rgb(255, 255, 255);
  --clr-dark-gray: gray;
  --clr-dark-black: #121212;
  --clr-dark-text: rgb(255, 255, 255);
}

* {
  box-sizing: border-box;
  padding: 0;
  scroll-behavior: smooth;
}

body {
  font-family: var(--font-main);
  margin: 0 auto;
}

.wrapper {
  background-color: var(--clr-background);
}

.container {
  width: 95%;
  margin: 0 auto;
}











/* PHONE SCREEN*

/* -------------------------Header/Navbar */
header {
  padding-top: 30px;
  width: 100%;
  margin: 0 auto;
}

.navbar {
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding-bottom: 60px;
}


/* home/projects/skills/contact box*/
.navbar__ul {
  display: flex;
  flex-direction: column;
  align-items: center;
  list-style-type: none;
  width: 100%;
  max-width: 500px;
}


/* home/projects/skills/contact text color*/
.navbar__ul a {
  text-decoration: none;
  color: black;
  font-size: 20px;
  font-weight: 400;
}

/* home/projects/skills/contact list*/
.navbar__ul li {
  background: white;
  width: 50%;
  text-align: center;
  margin-top: 2px;
  margin-bottom: 2px;
  padding-top: 5px;
  padding-bottom: 5px;
}






/* hello, my name is jacob. i am a robotics engineer */
/* about me box*/
.header__container {
  display: flex;
  flex-direction: column-reverse;
  align-items: center;
  margin-top: 20px;
  margin-bottom: 15px;
  padding-bottom: 2rem;
  margin: 0 auto;
  max-width: 100%;
}
/* pic */
.header__container img {
  width: 50%;
  border-radius: 50%;
  filter: grayscale(100%);
  border: 2px solid black;
}


.header__text__container {
  padding-top: 3rem;
}
/* about me text */
.header__text {
  padding-left: 0rem; /* separation between image and about me text, 0 for phone screen bc img is above text*/
  font-size: 20px;
  font-weight: 1000;
  line-height: 2rem;
  text-align: center;
}
/* End of Header/Navbar--------------------- */













/* Portfolio section ----------------------- */
.portfolio,
.portfolio__container {
  display: flex;
}
.portfolio {
  background-color: rgb(255, 255, 255);
  margin-top: 2.5rem;
  padding-top: 3rem;
  flex-direction: column;
  align-items: center;
  width: 100%;
  margin: 0 auto;
}

/* projects header */
.portfolio__header {
  font-size: 2rem;
  margin-bottom: 2rem;
}

.portfolio__container {
  display: flex;
  align-items: center;
  justify-content: space-around;
  text-align: center;
  flex-direction: column;
  width: 95%;
}

.card {
  margin: 1.5rem 0;
  max-width: 360px;
  /*   box-shadow: 5px 5px 5px #fbbebe; */
  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 5px 0px,
    rgba(0, 0, 0, 0.5) 0px 2px 15px 0px;
  padding: 1rem;
  gap: 1rem;
}

.card img {
  width: 50%;
  margin-top: 1rem;
  margin-bottom: 1rem;
}

.card h2 {
  font-weight: 700;
  margin-bottom: 0.5rem;
  font-size: 20px;
}

.card p {
  font-weight: 200;
}

.text-container {
  width: 70%;
  margin: 0 auto;
}

/* End of services------------------------ */














/* Skills --------------------------------- */
.skills {
  text-align: center;
  margin-top: 100px;
}

/* skills header */
.skills h2 {
  font-size: 2rem;
  margin-bottom: 3rem;
}
.skills-container {
  display: flex;
  margin-top: 30px;
  flex-direction: column;
  text-align: center;
}

.skills__item {
  margin-bottom: 1rem;
  cursor: pointer;
  margin-left: 20px;
  margin-right: 20px;
}

.skills__item img:hover {
  transform: scale(1.1);
  transition: ease-out 0.3s;
}

.skills img {
  max-width: 80px;
  margin-bottom: -5px;
}















/* Footer --------------------------------- */

footer {
  display: flex;
  flex-direction: column;
  text-align: center;
  padding-top: 3rem;
  width: 100%;
  background-color: var(--clr-background);
}

.footer__nav {
  width: 100%;
  display: flex;
  min-height: 30px;
  padding: 10px;
  bottom: 0;
  text-align: center;
  justify-content: space-between;
}


/* contact header*/
footer h2 {
  font-size: 2rem;
  margin-top: 0rem;
  margin-bottom: 2rem;
}

/* contact text */
footer p {
  margin: 0 auto;
}

.footer__text-container {
  width: 100%;
  margin: 0 auto;
  padding-bottom: 1rem;
}

.footer__links-container {
  margin: 0 auto;
  display: flex;
  justify-content: center;
  flex-direction: row;
  padding-bottom: 7rem;
}

.footer__item {
  cursor: pointer;
  margin-left: 20px;
  margin-right: 20px;
  text-align: center;
}


/* jacobsayono copyright 2022*/
.footer__nav h2 {
  text-transform: none;
  font-size: 1.5rem;
}

.to-top {
  list-style-type: none;
  margin: 0px;
  margin-top: 10px;
  justify-self: flex-end;
  display: flex-end;
}

.to-top a {
  text-decoration: none;
  color: black;
}



















/* TABLET SCREEN */
/* 768px */
@media screen and (min-width: 768px) {
  .header__container {
    min-width: 600px;
  }

  header {
    padding-bottom: 4rem;
  }
  .navbar {
    width: 100%;
    display: flex;
    bottom: 0;
    justify-content: space-between;
    padding-left: 1rem;
  }

  .navbar ul {
    display: flex;
    flex-direction: row;
  }

  .navbar__ul li {
    padding: 5px 15px 15px 10px;
    background-color: transparent;
  }





  /* about me section */
  .header__container {
    display: flex;
    flex-direction: row-reverse;
    margin-bottom: 15px;
    align-items: center;
    justify-content: center;
  }

  .header__container img {
    max-width: 300px;
  }

  .header__text {
    text-align: left;
    padding-left: 5rem; /* separation between image and about me text*/
    font-size: 40px;
    margin-top: 1rem;
    line-height: 3.5rem;
  }

  /* Portfolio section at 768----------- */
  .portfolio__container {
    flex-direction: row;
    align-items: center;
    flex-wrap: wrap;
    width: 100%;
    max-width: 1165px;
  }

  .card {
    min-width: 300px;
    width: 100%;
  }

  .card img {
    max-width: 100%;
    margin-bottom: 1rem;
  }

  /* Skills at 768 ------------------- */

  .skills {
    width: 80%;
    text-align: center;
    margin-top: 4rem;
  }

  .skills-container {
    flex-direction: row;
    justify-content: center;
    flex-grow: 1;
    width: 100%;
    margin-bottom: 80px;
  }

  .skills h2 {
    font-size: 2rem;
  }

  .skills__item {
    margin-left: 40px;
    margin-right: 40px;
  }

  /* Footer at 768px ---------------- */
  footer {
    display: flex;
    align-items: center;
  }

  footer p {
    max-width: 400px;
    padding-bottom: 1rem;
  }

  .phone,
  .email {
    margin-right: 8px;
  }

  .footer__nav {
    width: 95%;
  }

  /* jacobsayono bottom of page*/
  .footer__nav h2 {
    text-transform: none;
    font-size: 1.5rem;
  }
  
  /* back to top */
  .to-top {
    display: flex-end;
  }
}


















/* COMPUTER SCREEN */
/* min width 1024 ---------------------------------- */
@media screen and (min-width: 1024px) {
  .navbar,
  .navbar__ul,
  .header__container {
    display: flex;
  }
  .navbar {
    flex-direction: row;
    justify-content: space-between;
  }

  .navbar__ul {
    flex-direction: row;
  }

  .navbar__ul li {
    background-color: transparent;
  }

  .navbar__ul .link {
    margin: 0;
  }

  .header__container {
    flex-direction: row-reverse;
    margin-bottom: 15px;
    align-items: center;
    justify-content: center;
  }

  .header__container img {
    max-width: 330px;
  }


  /* Portfolio section------------------------- */
  .portfolio__container {
    flex-direction: row;
    align-items: center;
    flex-wrap: wrap;
    width: 100%;
  }

  .card {
    max-width: 300px;
  }

  .card img {
    max-width: 100%;
    margin-bottom: 1rem;
  }

  .card p {
    font-weight: 200;
  }
  /* End Portfolo------------------------------ */

  .footer__nav h2 {
    text-transform: none;
    font-size: 1.5rem;
  }
}























/* Dark mode------------------------------- */
button[class="darkmode"] {
  width: 30px;
  height: 30px;
  cursor: pointer;
  background-color: white;
  border: 2px solid transparent;
  border-radius: 50%;
}

.darkmode .portfolio {
  background-color: var(--clr-dark-black);
  color: var(--clr-dark-text);
}

.darkmode footer {
  background-color: var(--clr-dark-black);
  color: var(--clr-dark-text);
}

.darkmode .skills__item img {
  background-color: white;
  border: 15px solid white;
  border-radius: 25%;
}

.darkmode .wrapper {
  background-color: var(--clr-dark-black);
  color: var(--clr-dark-text);
}

.darkmode .navbar__ul li {
  color: var(--clr-dark-text);
  background-color: transparent;
}

.darkmode a[href] {
  color: var(--clr-dark-text);
}

